chore: trim runtime with jlink